
vx.xx status, mm/dd/yyyy

v0.20 alpha,
	New:
		- Updated code to use OpenNI v1.1.041, Nite v1.3.1.5
		- Tested the library with Processing 1.5.1
		- Added Nite extensions XnVPushDetector/XnVSwipeDetector from David Buchman. Had to change it a bit, due to changes
		  of Nite in the current version, this functions where removed:
			SetSteadyMaxVelocity
			GetSteadyMaxVelocity
		- Ported some more NITE classes:
			- XnVSelectableSlider2D
			- XnVWaveDetector
			- XnVSelectableSlider1D
			- XnVSlider1D
			- XnVSlider2D
			- XnVSlider3D
		- Changed some Nite files, because of deprecated methods
			-  XnVSessionManager: Initialize,SetGesture, SetQRGesture
		- Reorganized the sample folder structure and the names of the examples
		- Added new example:
		  SimpleOpenNI_NITE_Slider2d	- Shows how to use 2D Sliders
		- Fixed a bug: If you play a redord, skeletons were not displayed

v0.18 alpha, 03/27/2011
	New:
		- Implemented multithreading support, the hole camera captureing will be made in an own thread. 
		  By default it will still run in single threaded mode, to enable multithreading, just use this line:
		  context = new SimpleOpenNI(this,SimpleOpenNI.RUN_MODE_MULTI_THREADED);
		  So the drawing thread of processing is less stessed(the examples work now well, even on my Intel Atom/Linux).
		  Not all functions can profit that much from multithreading, 'depthMapRealWorld' will still slow down the because
		  it copies w*h*Vector3d from c++ to java, which takes quite a will(30-40ms)
		  The hole implementation is not done, the callbacks of openNI are still from the other thread,
		  should be in the same thread as processing. For NITE this is already implemented.
		- Improved the performance in single threaded mode as well
		- Added new example:
		  SimpleOpenNI_DepthImage_Threaded - Show how to use multithreading

		  
v0.17 alpha, 03/23/2011
	New:
		- Improved the overall performance